# Hyper-TA

./: .gitignore  README.md  SETUP.md  app.py  claude.md  cli.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
src/ta/: __init__.py
src/ta/api/: routes_backtesting.py  routes_data.py  routes_functions.py  routes_ml.py  routes_strategies.py  routes_utils.py
src/ta/backtesting/: g.py
src/ta/data/: __init__.py  fetch_yfinance.py
src/ta/db/: market.db  market_db.py
src/ta/functions/: __init__.py
src/ta/functions/indicators/: __init__.py  momentum_indicators.py  threshold_functions.py  trend_indicators.py  universal_indicator_dispatcher.py  universal_threshold_dispatcher.py  volatility_indicators.py
src/ta/functions/metrics/: __init__.py  derivatives.py  entropy.py  universal_metrics_dispatcher.py
src/ta/functions/plots/: __init__.py  plot_dynamic_thresholds.py  plot_indicators.py  plot_metrics.py  plot_signals.py  plot_weekends.py
src/ta/ml/optimizers/: __init__.py  search.py  searchSpaces.py
src/ta/utils/: helper.py
tests/: __init__.py  general.py  test_basic.py
